@@ -209,7 +209,7 @@ class Unit : public AListElem
 		void CopyFlags(Unit *);
 		int GetBattleItem(AString &itm);
 		int GetArmor(AString &itm, int ass);
-		int GetMount(int index, int canFly, int canRide, int &bonus);
+		int GetMount(AString &itm, int canFly, int canRide, int &bonus);
 		int GetWeapon(AString &itm, int riding, int ridingBonus,
 				int &attackBonus, int &defenseBonus, int &attacks);
 		int CanUseWeapon(WeaponType *pWep, int riding);
